--- a/Software/Expense & Budget Helper/Expense & Budget Helper/Expense & Budget Helper.csproj
+++ b/Software/Expense & Budget Helper/Expense & Budget Helper/Expense & Budget Helper.csproj
@@ -62,6 +62,12 @@
     <Compile Include="FrmTroskovi.Designer.cs">
       <DependentUpon>FrmTroskovi.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmUnos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmUnos.Designer.cs">
+      <DependentUpon>FrmUnos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Trosak.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,6 +77,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmTroskovi.resx">
       <DependentUpon>FrmTroskovi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmUnos.resx">
+      <DependentUpon>FrmUnos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
