--- a/Software/Expense & Budget Helper/Expense & Budget Helper/Expense & Budget Helper.csproj
+++ b/Software/Expense & Budget Helper/Expense & Budget Helper/Expense & Budget Helper.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\TrosakRespository.cs" />
+    <Compile Include="Models\VrstaTroska.cs" />
+    <Compile Include="Repositories\VrsteTroskovaRepository.cs" />
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
