Kreiran novi model Kategorija i repozitorij KategorijeRepository.

--- a/Software/Expense & Budget Helper/Expense & Budget Helper/Expense & Budget Helper.csproj
+++ b/Software/Expense & Budget Helper/Expense & Budget Helper/Expense & Budget Helper.csproj
@@ -71,6 +71,8 @@
     <Compile Include="Models\Trosak.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\Kategorija.cs" />
+    <Compile Include="Repositories\KategorijeRepository.cs" />
     <Compile Include="Repositories\TrosakRespository.cs" />
     <Compile Include="Models\VrstaTroska.cs" />
     <Compile Include="Repositories\VrsteTroskovaRepository.cs" />
